# Certify-app

./: .gitignore  QUICKSTART.md  backUP-SPI.txt  generate-icons.js  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  tailwind.config.js  template.docx  tsconfig.json  vite.config.ts  ~$mplate.docx
.github/: copilot-instructions.md
APP/: .gitignore  COLOR_THEME_SPEC.md  MIGRATION_TO_SERVER_STORAGE.md  PROJECT_COMPLETE.md  QUICKSTART_TESTING.md  README.md  SECURITY.md  SECURITY_ACTION_PLAN.md  TEST_INDEX.md  TEST_README.md  WORKFLOW_IMPLEMENTATION_STATUS.md  build-android.ps1  capacitor.config.ts  clean-old-releases.ps1  clear-app-cache.ps1  debug-db.ts  index.html  package-lock.json  package.json  run-expiration-test.ps1  tint-admin-icons.mjs  vite.config.ts
APP-ADMIN/: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
APP/src-tauri/: Cargo.toml  tauri.conf.json
APP/src-tauri/src/: lib.rs
admin/: index.html
assets/: ToolsPage-BTeG2ydO.js  ToolsPage-Bx1A0yzC.js  ToolsPage-DO-t2035.js  ToolsPage-DeKVOeQe.js  ToolsPage-QKdymdyz.js  bg-2-bdpX8K.js  bg-6mRKEz6X.js  bg-B8mY0Xfp.js  bg-BHCYdJX2.js  bg-BRjs71G-.js  bg-Bti4Nn9N.js  bg-C4cfKnEu.js  bg-CXJeduCp.js  bg-DIIzU_-S.js  bg-K_eNxVim.js  certificateGenerator-BQdzjMuI.js  certificateGenerator-BmX9tfMH.js  certificateGenerator-ByYTOvTD.js  certificateGenerator-DGh9R0_2.js  certificateGenerator-Dk7GkmwG.js  certificateGenerator-DmGm2V6u.js  certificateGenerator-Qp2cHSvL.js  certificateGenerator-XUwLjXb9.js  (+84 more)
(+164 files in other folders)
